# BBSim

./: README.md  a  c  pyproject.toml  r  versions.md
config/: app.toml  simulation.toml
src/bbsim/: __init__.py  __main__.py
src/bbsim/core/: app_config.py  astro_visual_style.py  checkpoint.py  config.py  context.py  epoch_gallery.py  epoch_notes.py  era_visual_composer.py  expansion.py  fields.py  pipeline.py  report.py  scale.py  seed.py  simulation_config.py  state.py  time_director.py  timeline.py  visual_director.py
src/bbsim/numeric/: backend.py  numpy_backend.py
src/bbsim/render/: field_renderer.py  png_writer.py
src/bbsim/stages/: base.py  dark_ages.py  early_universe.py  first_stars.py  gas_collapse.py  inflation.py  personal_seed.py  recombination.py  reionization.py
src/bbsim/ui/: app.py  main_window.py  space_overlay.py  timeline_panel.py
tests/: test_app_config.py  test_astro_visual_style.py  test_dark_ages_growth.py  test_epoch_gallery.py  test_era_visual_composer.py  test_expansion.py  test_first_stars.py  test_gas_collapse.py  test_inflation.py  test_pipeline.py  test_reionization.py  test_scale.py  test_seed_determinism.py  test_simulation_config.py  test_time_director.py  test_timeline.py  test_visual_director.py
